--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 <body>
     <div class="container">
         <header class="header">
-        <h1 id="title" class="text-center">Soi$Arinda Survey Form</h1>
+        <h1 id="title" class="text-center">Soi&Arinda Survey Form</h1>
         <p id="discription" class="description text-center">Thank you for taking the time to help us improve the platform</p>
         </header>
+        
+        <div class="survey-form">
         <form id="survey-form">
             <div class="form-group">
                 <label id="name-lable" for="name">Name</label>
@@ -109,10 +111,8 @@
                     Front end projects
                 </label>
             </div>
-
-
-        </form>
-
+        </form>        
+    </div>
 
     </div>
     
