--- a/index.html
+++ b/index.html
@@ -43,6 +43,71 @@
                     <input class="input-radio" name="user-recommend" value="definitely" type="radio" checked="">
                     Definitely
                 </label>
+                <label>
+                    <input class="input-radio" name="user-recommend" value="maybe" type="radio" checked="">
+                    Maybe
+                </label>
+                <label>
+                    <input class="input-radio" name="user-recommend" value="not_sure" type="radio" checked="">
+                    Not Sure
+                </label>
+            </div>
+            <div class="form-group">
+                <p>Which is your favorite feature</p>
+                <select id="dropdown" class="form-control" name="role" required="">
+                    <option disabled="" selected="" value="">select an option</option>
+                    <option value="challenges">Challenges</option>
+                    <option value="project">Project</option>
+                    <option value="community">community</option>
+                    <option value="openSource">open Source</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <p>would do you like improved (cheack all that apply</p>
+                <label>
+                    <input class="input-checkbox" name="Prefer" value="front-end-project" type="checkbox" checked="">
+                    Front end projects
+                </label>
+                <label>
+                    <input class="input-checkbox" name="Prefer" value="back-end-project" type="checkbox" checked="">
+                    Back end projects
+                </label>
+                <label>
+                    <input class="input-checkbox" name="Prefer" value="front-end-project" type="checkbox" checked="">
+                    Front end projects
+                </label>
+                <label>
+                    <input class="input-checkbox" name="Prefer" value="front-end-project" type="checkbox" checked="">
+                    Front end projects
+                </label>
+                <label>
+                    <input class="input-checkbox" name="Prefer" value="front-end-project" type="checkbox" checked="">
+                    Front end projects
+                </label>
+                <label>
+                    <input class="input-checkbox" name="Prefer" value="front-end-project" type="checkbox" checked="">
+                    Front end projects
+                </label>
+                <label>
+                    <input class="input-checkbox" name="Prefer" value="front-end-project" type="checkbox" checked="">
+                    Front end projects
+                </label>
+                <label>
+                    <input class="input-checkbox" name="Prefer" value="front-end-project" type="checkbox" checked="">
+                    Front end projects
+                </label>
+                <label>
+                    <input class="input-checkbox" name="Prefer" value="front-end-project" type="checkbox" checked="">
+                    Front end projects
+                </label>
+                <label>
+                    <input class="input-checkbox" name="Prefer" value="front-end-project" type="checkbox" checked="">
+                    Front end projects
+                </label>
+                <label>
+                    <input class="input-checkbox" name="Prefer" value="front-end-project" type="checkbox" checked="">
+                    Front end projects
+                </label>
             </div>
 
 
