--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <div class="container">
         <header class="header">
-        <h1 id="title" class="text-center">Soi&Arinda Survey Form</h1>
-        <p id="discription" class="description text-center">Thank you for taking the time to help us improve the platform</p>
+        <h1 id="title" class="text-center">Soi & Arinda Survey Form</h1>
+        <h3 id="discription" class="description text-center">Thank you for taking the time to help us improve the platform</h3>
         </header>
-        
+
         <div class="survey-form">
         <form id="survey-form">
             <div class="form-group">
