made changes on check boxes

--- a/index.html
+++ b/index.html
@@ -65,51 +65,21 @@
                 </select>
             </div>
             <div class="form-group">
-                <p>would do you like improved (cheack all that apply</p>
-                <label>
-                    <input class="input-checkbox" name="Prefer" value="front-end-project" type="checkbox" checked="">
-                    Front end projects
-                </label>
-                <label>
-                    <input class="input-checkbox" name="Prefer" value="back-end-project" type="checkbox" checked="">
-                    Back end projects
-                </label>
-                <label>
-                    <input class="input-checkbox" name="Prefer" value="front-end-project" type="checkbox" checked="">
-                    Front end projects
-                </label>
-                <label>
-                    <input class="input-checkbox" name="Prefer" value="front-end-project" type="checkbox" checked="">
-                    Front end projects
-                </label>
-                <label>
-                    <input class="input-checkbox" name="Prefer" value="front-end-project" type="checkbox" checked="">
-                    Front end projects
-                </label>
-                <label>
-                    <input class="input-checkbox" name="Prefer" value="front-end-project" type="checkbox" checked="">
-                    Front end projects
-                </label>
-                <label>
-                    <input class="input-checkbox" name="Prefer" value="front-end-project" type="checkbox" checked="">
-                    Front end projects
-                </label>
-                <label>
-                    <input class="input-checkbox" name="Prefer" value="front-end-project" type="checkbox" checked="">
-                    Front end projects
-                </label>
-                <label>
-                    <input class="input-checkbox" name="Prefer" value="front-end-project" type="checkbox" checked="">
-                    Front end projects
-                </label>
-                <label>
-                    <input class="input-checkbox" name="Prefer" value="front-end-project" type="checkbox" checked="">
-                    Front end projects
-                </label>
-                <label>
-                    <input class="input-checkbox" name="Prefer" value="front-end-project" type="checkbox" checked="">
-                    Front end projects
-                </label>
+                <p>Would do you like improved (Check all that apply)</p>
+                <input type="checkbox"><label for="vehicle1"> Front-end Projects</label><br>
+                <input type="checkbox"><label for="vehicle1"> Back-end Projects</label><br>
+                <input type="checkbox"><label for="vehicle1"> Data Visualization</label><br>
+                <input type="checkbox"><label for="vehicle1"> Challenges</label><br>
+                <input type="checkbox"><label for="vehicle1"> Open Source Community</label><br>
+                <input type="checkbox"><label for="vehicle1"> Gitter help rooms</label><br>
+                <input type="checkbox"><label for="vehicle1"> Videos</label><br>
+                <input type="checkbox"><label for="vehicle1"> City Meetups</label><br>
+                <input type="checkbox"><label for="vehicle1"> Wiki</label><br>
+                <input type="checkbox"><label for="vehicle1"> Forum</label><br>
+                <input type="checkbox"><label for="vehicle1"> Additional Courses</label><br>
+            
+
+
             </div>
         </form>        
     </div>
