--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                     <input type="radio" value="Not Sure" >Not Sure
                 </label>
             </div>
+
             <div class="form-group">
                 <p>Which is your favorite feature</p>
                 <select id="dropdown" class="form-control" name="role" required="">
@@ -62,7 +63,7 @@
                     <option value="openSource">open Source</option>
                 </select>
             </div>
-            
+
             <div class="form-group">
                 <p>Would do you like improved (Check all that apply)</p>
                 <input type="checkbox"><label> Front-end Projects</label><br>
@@ -80,7 +81,7 @@
                 <label style="margin-top: 20px;">Any comments or suggestions?</label> <br/>
                 <textarea name="comment" placeholder="Enter Comment Here ..." rows="4" cols="80"></textarea>
         <div>
-            <button type="button">SUBMIT</button>
+            <button class="button-width" type="button" style="text-align: center; background-color: green; width: 100%;">SUBMIT</button>
         </div>
 
 
